<resources>
    <string name="app_name">Personal Notes</string>
    <string name="empty"></string>
    <string name="app_name_on_welcome">Note App</string>
    <string name="design_by_ayush">Design by Ayush</string>
    <string name="app_logo_description">Application Logo</string>
    <string name="add_note_header">Add Note</string>
    <string name="edit_note_header">Edit Note</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="save_note_button">Save Note</string>
    <string name="update_note_button">Update Note</string>
    <string name="back_button_description">Back</string>
    <string name="main_activity_title">Personal Notes</string>
    <string name="sign_out_button_description">Sign Out</string>
    <string name="add_note_button_description">Add Note</string>
    <string name="pin_button_description">Pin Note</string>
    <string name="menu_button_description">Menu</string>
    <string name="add_note_fab_description">Add Note</string>
</resources>